# vox

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/vox-core/: Cargo.toml
crates/vox-core/examples/: spike_quic.rs  spike_tunnel.rs
crates/vox-core/src/: atrest.rs  cbor.rs  deniable.rs  error.rs  governance.rs  group.rs  hash.rs  identity.rs  join.rs  lib.rs  log.rs  nat.rs  pairwise.rs  suite.rs  transport.rs  tunnel.rs  wire.rs
crates/vox-core/src/atrest/: idfactor.rs  lock.rs  retention.rs  sek.rs  store.rs  vault.rs
crates/vox-core/src/deniable/: dgka.rs  epoch.rs  esk_publication.rs  key.rs  rekey.rs  rounds.rs  share.rs  tests.rs  verifier.rs
crates/vox-core/src/governance/: capability.rs  cert.rs  consent.rs  entry.rs  evaluator.rs  genesis.rs  invite.rs  membership.rs  policy.rs  rotation.rs  vectors.rs  visibility.rs
crates/vox-core/src/group/: history.rs  message.rs  senderkey.rs  skdm.rs  state.rs  wire.rs
crates/vox-core/src/identity/: backup.rs  binding.rs  composite.rs  device.rs  keyagreement.rs  rng.rs
crates/vox-core/src/join/: channelid.rs  cpace.rs  pop.rs  pow.rs  rendezvous.rs  session.rs
crates/vox-core/src/join/pow/: wagner.rs
crates/vox-core/src/log/: dag.rs  entry.rs  feed.rs  negentropy.rs  quota.rs  selfchannel.rs  sync.rs
crates/vox-core/src/nat/: bootstrap.rs  holepunch.rs  multiaddr.rs  portmap.rs  reachability.rs  record.rs  store.rs
crates/vox-core/src/nat/portmap/: gateway.rs  natpmp.rs  pcp.rs
crates/vox-core/src/pairwise/: header.rs  init_message.rs  kem.rs  message.rs  pqxdh.rs  ratchet.rs  session.rs
crates/vox-core/src/transport/: datagram.rs  identity_cert.rs  provider.rs  quic.rs  session.rs  stream_transport.rs  tests.rs  verifier.rs
crates/vox-core/src/tunnel/: addr.rs  authz.rs  service.rs  session.rs  socks.rs  sshca.rs
crates/vox-tui/: Cargo.toml
crates/vox-tui/src/: app.rs  cli.rs  lib.rs  main.rs  qr.rs  state.rs  ui.rs  verify.rs  viewmodel.rs
docs/adr/: ADR-001-vox-foundation-vision-threat-model-and-principles.md  ADR-002-identity-and-key-model.md  ADR-003-post-quantum-and-crypto-agility-policy.md  ADR-004-pairwise-secure-channel.md  ADR-005-channel-addressing-and-authenticated-join.md  ADR-006-group-messaging-sender-keys.md  ADR-007-membership-consent-and-admin-governance.md  ADR-008-replicated-authenticated-log-and-sync.md  ADR-009-deniability-mode.md  ADR-010-at-rest-storage-and-retention.md  ADR-011-transport-substrate.md  ADR-012-nat-traversal-and-reachability.md  ADR-013-overlay-tunneling.md  ADR-014-macos-client.md  ADR-015-rust-tui-client.md  README.md
