# Vox Lux — Cargo workspace.
#
# Per ADR-001 principle 10 (Rust-maximal): one shared `vox-core` library and
# Rust clients over it. Crates are added to `members` as milestones land.
[workspace]
resolver = "2"
members = ["crates/vox-core"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
authors = ["Robert E. Lee <robert@agidreams.us>"]
repository = "https://github.com/agidreams/vox"

# Dependencies shared across crates are pinned here so every crate signs/verifies
# with the exact same primitive versions (ADR-003: deterministic, agile crypto).
[workspace.dependencies]
sha2 = "0.10"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
# Cryptographic primitives. Pinned once here so every crate signs/verifies with
# identical primitive versions (ADR-003: deterministic, agile crypto). Crate
# selection rationale lives in the module docs of `vox-core::identity`.
#
# Hybrid-PQ signatures + KEM (RustCrypto): actively maintained, rand_core 0.10,
# broad ecosystem adoption. `getrandom` seeds deterministic-from-seed keygen, so
# no rand_core RNG object is threaded through key generation.
ed25519-dalek = { version = "2.2", default-features = false, features = ["std", "zeroize"] }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets", "zeroize"] }
# Ristretto255 group ops for CPace (ADR-005, M3). Pinned to the same 4.1 the
# dalek stack already resolves to, so there is one curve25519-dalek in the tree.
# Default features include the ristretto `from_uniform_bytes` one-way map and
# `Scalar::from_bytes_mod_order_wide` that CPace's generator and scalar sampling
# need; `zeroize` lets scalar secrets be wiped.
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "zeroize", "precomputed-tables"] }
# Constant-time choice/equality used in CPace identity-element checks (ADR-005).
subtle = { version = "2.6", default-features = false }
ml-dsa = { version = "0.1.1", default-features = false, features = ["alloc", "zeroize"] }
ml-kem = { version = "0.3.2", default-features = false, features = ["alloc", "zeroize", "getrandom"] }
getrandom = "0.3"
# PQXDH + Double Ratchet symmetric crypto (ADR-004, M2). RustCrypto, pinned to
# the digest-0.10 / sha2-0.10 island the identity layer already uses so HKDF and
# the HMAC chain KDF share one SHA-256 implementation:
#   hkdf  — HKDF-SHA-256 (the PQXDH root-secret KDF and the Double Ratchet root KDF)
#   hmac  — HMAC-SHA-256 (the Double Ratchet symmetric chain KDF; a bare-SHA256
#           chain KDF is explicitly rejected by ADR-004 / the Signal spec)
#   aes-gcm — AES-256-GCM, the vox-suite-1 default AEAD for ratchet envelopes
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
# Equihash (n=200,k=9) join proof-of-work (ADR-005, M3). The librustzcash crate:
# cheap runtime-(n,k) verification by default; the `solver` feature adds the real
# (200,9) tromp solver (a C++ FFI backend, used only by the heavy #[ignore]d
# real-parameter test). Vox's always-on solve path is a pure-Rust Wagner solver
# in `join::pow` parameterised for reduced CI params; the crate verifier is the
# cross-check oracle for both.
equihash = { version = "0.3", default-features = false, features = ["std"] }
# BLAKE2b with personalization — the Equihash string generator (ADR-005 PoW).
blake2b_simd = { version = "1.0", default-features = false, features = ["std"] }

[profile.release]
# Crypto + protocol code: keep overflow checks on in release too. A silent wrap
# in a length or sequence field is a correctness/security bug, not a perf knob.
overflow-checks = true
lto = "thin"
