# Vox Lux — Cargo workspace.
#
# Per ADR-001 principle 10 (Rust-maximal): one shared `vox-core` library and
# Rust clients over it. Crates are added to `members` as milestones land.
[workspace]
resolver = "2"
members = ["crates/vox-core", "crates/vox-tui"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
authors = ["Robert E. Lee <robert@agidreams.us>"]
repository = "https://github.com/agidreams/vox"

# Dependencies shared across crates are pinned here so every crate signs/verifies
# with the exact same primitive versions (ADR-003: deterministic, agile crypto).
[workspace.dependencies]
sha2 = "0.10"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
# Cryptographic primitives. Pinned once here so every crate signs/verifies with
# identical primitive versions (ADR-003: deterministic, agile crypto). Crate
# selection rationale lives in the module docs of `vox-core::identity`.
#
# Hybrid-PQ signatures + KEM (RustCrypto): actively maintained, rand_core 0.10,
# broad ecosystem adoption. `getrandom` seeds deterministic-from-seed keygen, so
# no rand_core RNG object is threaded through key generation.
ed25519-dalek = { version = "2.2", default-features = false, features = ["std", "zeroize"] }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets", "zeroize"] }
# Ristretto255 group ops for CPace (ADR-005, M3). Pinned to the same 4.1 the
# dalek stack already resolves to, so there is one curve25519-dalek in the tree.
# Default features include the ristretto `from_uniform_bytes` one-way map and
# `Scalar::from_bytes_mod_order_wide` that CPace's generator and scalar sampling
# need; `zeroize` lets scalar secrets be wiped.
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "zeroize", "precomputed-tables"] }
# Constant-time choice/equality used in CPace identity-element checks (ADR-005).
subtle = { version = "2.6", default-features = false }
ml-dsa = { version = "0.1.1", default-features = false, features = ["alloc", "zeroize"] }
ml-kem = { version = "0.3.2", default-features = false, features = ["alloc", "zeroize", "getrandom"] }
getrandom = "0.3"
# PQXDH + Double Ratchet symmetric crypto (ADR-004, M2). RustCrypto, pinned to
# the digest-0.10 / sha2-0.10 island the identity layer already uses so HKDF and
# the HMAC chain KDF share one SHA-256 implementation:
#   hkdf  — HKDF-SHA-256 (the PQXDH root-secret KDF and the Double Ratchet root KDF)
#   hmac  — HMAC-SHA-256 (the Double Ratchet symmetric chain KDF; a bare-SHA256
#           chain KDF is explicitly rejected by ADR-004 / the Signal spec)
#   aes-gcm — AES-256-GCM, the vox-suite-1 default AEAD for ratchet envelopes
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
# At-rest double-lock passphrase factor (ADR-010, M8). Argon2id is the memory-hard
# `factor_pass` KDF for the channel passphrase and the identity-vault passphrase;
# pinned to the RustCrypto password-hashes island so it shares one `alloc`/`zeroize`
# posture with the rest of the symmetric stack. `alloc` enables `hash_password_into`
# (the crate allocates the memory blocks itself); Vox drives it through the low-level
# `Params`/`Argon2::new` API with explicit `(m_cost, t_cost, p_cost)` profiles, never
# the PHC-string convenience layer.
argon2 = { version = "0.5", default-features = false, features = ["alloc", "zeroize"] }
# Best-effort `mlock` of in-memory secrets (ADR-010 §"App-lock and memory hygiene").
# `region` exposes a *safe* `lock`/`LockGuard` RAII API over the platform mlock
# syscall, so the `#![forbid(unsafe_code)]` crate root holds — Vox never writes raw
# `unsafe`. mlock is best-effort: on failure the secret still lives in a zeroizing
# buffer (the defined fallback), never unprotected.
region = "3"
# Equihash (n=200,k=9) join proof-of-work (ADR-005, M3). The librustzcash crate:
# cheap runtime-(n,k) verification by default; the `solver` feature adds the real
# (200,9) tromp solver (a C++ FFI backend, used only by the heavy #[ignore]d
# real-parameter test). Vox's always-on solve path is a pure-Rust Wagner solver
# in `join::pow` parameterised for reduced CI params; the crate verifier is the
# cross-check oracle for both.
equihash = { version = "0.3", default-features = false, features = ["std"] }
# BLAKE2b with personalization — the Equihash string generator (ADR-005 PoW).
blake2b_simd = { version = "1.0", default-features = false, features = ["std"] }

# --- Transport substrate (ADR-011, M9) ---------------------------------------
# The QUIC substrate. `quinn` 0.11 rides `rustls` 0.23 over `tokio` (its default
# `runtime-tokio` feature). Streams give per-stream backpressure with no
# cross-stream head-of-line blocking; RFC 9221 unreliable datagrams carry the
# low-latency flows. One connection per peer.
quinn = { version = "0.11", default-features = false, features = ["rustls-aws-lc-rs", "runtime-tokio", "log"] }
# TLS 1.3 with the X25519MLKEM768 hybrid group. The `aws_lc_rs` provider supplies
# the hybrid KEM (X25519 + ML-KEM-768) — the one ecosystem-forced C/asm crypto in
# the transport (ADR-001 #10 Rust-maximal exception, documented in `transport`).
# App crypto stays RustCrypto. We pin the provider explicitly and restrict
# `kx_groups` to exactly the hybrid group, so there is NO classical downgrade
# target on the TLS wire.
rustls = { version = "0.23.22", default-features = false, features = ["aws_lc_rs", "std"] }
# The `&'static dyn SupportedKxGroup` for X25519MLKEM768 (TLS code point 0x11EC),
# used to pin `CryptoProvider::kx_groups` to the single hybrid group.
rustls-post-quantum = "0.2"
# Shared PKI value types (CertificateDer / PrivateKeyDer / ServerName) re-exported
# by rustls; pinned so the verifier and config code share one version.
rustls-pki-types = "1"
# Self-signed cert + the custom X.509 identity extension (libp2p-tls-style). rcgen
# 0.14 builds the leaf cert and embeds the extension at our provisional OID.
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
# DER parsing on the verify side: pull the identity extension out by OID and read
# the cert's SubjectPublicKeyInfo to bind the proof-of-possession.
x509-parser = "0.16"
# Async runtime for quinn + the loopback transport tests.
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "net", "time", "io-util", "sync", "macros"] }
# `Bytes` is quinn's datagram payload type (its own public API surface). Pinned at
# the workspace level so we share the exact `bytes` quinn resolves.
bytes = { version = "1", default-features = false }

# --- Rust TUI client (ADR-015, M12) ------------------------------------------
# Pure-Rust terminal stack; keeps the static-musl generate path clean (ADR-015).
#   ratatui      — immediate-mode TUI widgets + layout, with a `TestBackend` that
#                  makes render-snapshot tests possible (the ADR release gate).
#   crossterm    — terminal backend (raw mode, alternate screen, key/mouse events)
#                  on Linux + macOS terminals; ratatui's default backend.
#   tui-textarea — the modeless/vim composer widget.
#   qrcode       — QR matrix generation for identity / invite / verification codes
#                  (rendered as Unicode half-blocks with an ASCII fallback).
#   clap (+complete/mangen) — args, shell completions, man pages.
#   secrecy      — `SecretBox`/`SecretString` redaction for the few secret-bearing
#                  CLI/config inputs (passphrases), complementing `zeroize`.
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", default-features = false, features = ["events"] }
tui-textarea = { version = "0.7", default-features = false, features = ["crossterm", "ratatui"] }
qrcode = { version = "0.14", default-features = false }
clap = { version = "4", features = ["derive", "cargo", "env", "wrap_help"] }
clap_complete = "4"
clap_mangen = "0.2"
secrecy = "0.10"

[profile.release]
# Crypto + protocol code: keep overflow checks on in release too. A silent wrap
# in a length or sequence field is a correctness/security bug, not a perf knob.
overflow-checks = true
lto = "thin"
