[package]
name = "vox-core"
description = "Vox Lux shared core: identity, crypto, log/sync, transport, governance, tunneling."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
ml-dsa.workspace = true
ml-kem.workspace = true
getrandom.workspace = true

[dev-dependencies]
hex.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
