[package]
name = "vox-core"
description = "Vox Lux shared core: identity, crypto, log/sync, transport, governance, tunneling."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
ml-dsa.workspace = true
ml-kem.workspace = true
getrandom.workspace = true
hkdf.workspace = true
hmac.workspace = true
aes-gcm.workspace = true
# At-rest storage & retention (ADR-010, M8).
argon2.workspace = true
region.workspace = true
# Channel join (ADR-005, M3).
curve25519-dalek.workspace = true
subtle.workspace = true
equihash.workspace = true
blake2b_simd.workspace = true
# Transport substrate (ADR-011, M9).
quinn.workspace = true
rustls.workspace = true
rustls-post-quantum.workspace = true
rustls-pki-types.workspace = true
rcgen.workspace = true
x509-parser.workspace = true
tokio.workspace = true
bytes.workspace = true

[features]
# The real (n=200,k=9) Equihash *solver* (ADR-005). Off by default because it
# pulls the librustzcash `solver` feature, which builds a C++ tromp backend via
# `cc`; only the heavy, `#[ignore]`d real-parameter solve test needs it. Verify
# and the pure-Rust reduced-parameter solver are always available without it.
equihash-solver = ["equihash/solver"]

[dev-dependencies]
hex.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
